# agro-reich

./: .gitignore  pyproject.toml
src/agro_reich/: __main__.py
src/agro_reich/scenarios/: collect_firetouched_mullein.yaml  collect_single_test.yaml  drive_test.yaml
src/agro_reich/utils/: baron.py  cords.py  cultures.py  driver.py  logger.py  path.py  scenarios.py
